# fine-art-ner

./: .gitignore  README.md  pyproject.toml  test.py
src/fine_art_ner/: dataset.py  loader.py  output.txt  output_2.json  output_3.json  output_4.json  output_4.txt  output_5.txt
src/fine_art_ner/datasets/: 001.txt  002.txt
src/flair/: conll_generator.py  data_cleaning.ipynb  test.txt  training.ipynb
src/flair/datasets/CSV/: 002.csv
src/flair/datasets/CoNLL/002/: 002.txt  README.md
src/flair/datasets/CoNLL/003/: 001.txt
src/flair/training_test/: test.txt  train.txt
