[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fine_art_ner"
description = "Package to create datasets for and train NER models for fine art applications"
version = "0.0.1"
authors = [{ name = "Xavier Gill", email = "xaviercgill@gmail.com" }]
keywords = ["ner", "machine learning", "artificial intelligence", "fine art"]
requires-python = ">= 3.10"
dependencies = ["numpy", "pandas"]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]
